--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
