--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "web-vitals": "^1.1.2"
